[package]
name = "spinny"
version = "0.1.1"
authors = ["not_a_seagull <jtnunley01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Spinlock-based RwLock struct, with lock_api"
repository = "https://github.com/not-a-seagull/spinny"
homepage = "https://github.com/not-a-seagull/spinny#readme"

[dependencies]
lock_api = "0.4.0"

[features]
default = []
nightly = ["lock_api/nightly"]
owning_ref = ["lock_api/owning_ref"]
