[package]
name = "spinny"
version = "0.2.2"
authors = ["notgull <jtnunley01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Spinlock-based RwLock struct, with lock_api"
repository = "https://github.com/notgull/spinny"
homepage = "https://github.com/notgull/spinny#readme"

[dependencies]
lock_api = "0.4.0"

[target.'cfg(loom)'.dependencies]
loom = "0.3.5"
once_cell = "1.4.1"

[features]
default = []
nightly = ["lock_api/nightly"]
owning_ref = ["lock_api/owning_ref"]
